# langchain-academy

./: .gitignore  LICENSE  README.md  pyproject.toml
module-0/: basics.ipynb  pyproject.toml
module-0/module_0/: basics.ipynb
module-1/: lesson-2-simple-graph.ipynb  lesson-4-chain.ipynb  lesson-5-router.ipynb  lesson-6-agent.ipynb  lesson-7-agent-memory.ipynb
module-2/: lesson-1-state-schema.ipynb  lesson-2-state-reducers.ipynb  lesson-3-multiple-schemas.ipynb  lesson-4-trim-filter-messages.ipynb  lesson-5-chatbot-summarization.ipynb  lesson-6-chatbot-external-memory.ipynb
module-3/: lesson-1-streaming-interruption.ipynb  lesson-2-breakpoints.ipynb  lesson-3-edit-state-human-feedback.ipynb  lesson-4-dynamic-breakpoints.ipynb  lesson-5-time-travel.ipynb
